# simhashindex

./: CMakeLists.txt  LICENSE  README.md  setup.py
src/: CMakeLists.txt  base_const.h  simhashindex.cc  simhashindex.h  test.cpp  wrap_pymod.cc  z_split_simhash.py  z_test.py
